<resources>
    <string name="title_config">设置</string>
    <string name="title_livectrl">现场指挥</string>
    <string name="title_contact">联系人</string>
    <string name="title_livecase">情况上报</string>
    <string name="title_device_report2repair">设备报修</string>
    <string name="title_message">站内短信</string>
    <string name="title_sendmsg">发送消息</string>
    <string name="title_tranmsg">转发消息</string>
    <string name="title_replaymsg">回复消息</string>
    <string name="title_selectcontact">选择接收人</string>
    <string name="title_deletemsg">删除消息</string>
    <string name="title_trainad">到发通告</string>
    <string name="title_schedule">时刻表</string>
    <string name="title_occupation">股道占用</string>
    <string name="title_sitemonitor">现场监控</string>
    <string name="title_task">待办工作</string>
    <string name="title_attach">附件</string>
    <string name="title_contactdetail">联系人详情</string>
    <string name="title_trainsearch">时刻查询</string>
    <string name="title_trainsearchresult">车次列表</string>
    <string name="title_search_result">搜索结果</string>
    <string name="title_stationschedule">列车时刻</string>
    <string name="title_devfault">设备报障</string>
    <string name="title_devfault_check">查看故障</string>
    <string name="title_devfaultreport">故障上报</string>
    <string name="title_broadcast">移动广播</string>
    <string name="title_broadcastspec">专题广播</string>
    <string name="title_broadcastmanual">人工广播</string>
    <string name="title_pointtask">重点任务</string>
    <string name="title_exceptiontask">异常任务</string>
    <string name="title_reportchart">图形报表</string>
    <string name="title_devicescheck">设备巡检</string>
    <string name="user_name">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="staff_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="dep_name">组&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;织：</string>
    <string name="sdcard_sizeall">总&#160;&#160;空&#160;&#160;间：</string>
    <string name="sdcard_sizeavail">剩余空间：</string>
    <string name="memory_all">内存大小：</string>
    <string name="memory_avail">剩余内存：</string>
    <string name="size_clean">空间清理</string>
    <string name="memory_clean">内存清理</string>
    <string name="sdcard_cleaning">正在清理客运通文件</string>
    <string name="sdcard_cleandone">客运通文件清理完毕</string>
    <string name="memory_cleaning">正在清理内存</string>
    <string name="memory_cleandone">内存清理完毕</string>
    <string name="logout">注销当前用户</string>
    <string name="changepassword">修改密码</string>
    <string name="oldpassword">原&#160;&#160;密&#160;&#160;码：</string>
    <string name="newpassword">新&#160;&#160;密&#160;&#160;码：</string>
    <string name="confirmpassword">确认密码：</string>
    <string name="exp_oldpassword">原密码不能为空！</string>
    <string name="exp_newpassword">新密码不能为空！</string>
    <string name="exp_confirmpassword">确认密码不能为空！</string>
    <string name="exp_twopassword">两次密码输入不相同，请重新输入！</string>
    <string name="connect">连接服务器中...</string>
    <string name="exp_changepassword">修改密码失败！</string>
    <string name="changepasswordsucceed">修改密码成功，请重新登录！</string>
    <string name="switchcamera">选择视频通话摄像头</string>
    <string name="switchcamerafront">选择视频通话摄像头：前置</string>
    <string name="switchcameraback">选择视频通话摄像头：后置</string>
    <string name="syncbasedata">同步基础数据</string>
    <string name="syncbasedatasucceed">同步基础数据成功</string>
    <string name="app_name">客运通</string>
    <string name="user_password">密	码：</string>
    <string name="configuration">&#160; 配置</string>
    <string name="config_set">设置</string>
    <string name="config_success">保存配置成功</string>
    <string name="config_server">服务器IP</string>
    <string name="login">登录</string>
    <string name="logining">正在登录,请稍候</string>
    <string name="messageArrived">您有未读短信！</string>
    <string name="lostLoginInfo">登录信息丢失，请重新登录</string>
    <string name="syncdata">正在与服务器同步基础数据，请稍后</string>
    <string name="menu_interphone">对讲机</string>
    <string name="menu_version">客运通版本号</string>
    <string name="menu_about">X-Chat版本检测</string>
    <string name="menu_checkupdate">版本检测</string>
    <string name="TheNowVersion">当前版本号</string>
    <string name="version">版本号：</string>
    <string name="currversion">当前版本号：</string>
    <string name="notneedupdate">当前已是最新版本，无需更新！</string>
    <string name="needupdate">有可升级的版本，建议更新！</string>
    <string name="updatenexttime">下次更新</string>
    <string name="updatenow">立即更新</string>
    <string name="need_download">当前设备中不存在X-Chat，建议下载！</string>
    <string name="next_download">下次下载</string>
    <string name="soon_download">立即下载</string>
    <string name="spare_nomal">正常</string>
    <string name="spare_using">在用</string>
    <string name="spare_waitrepair">等待维修</string>
    <string name="spare_repair">维修中</string>
    <string name="spare_cancel">报废</string>
    <string name="station_terminal">终点站</string>
    <string name="station_origin">发站</string>
    <string name="station_timezs">当前站发点</string>
    <string name="station_duty">乘务担当：</string>
    <string name="train_complement">定员</string>
    <string name="search">搜索</string>
    <string name="messageContent">短消息</string>
    <string name="staff">员工</string>
    <string name="trainNo">车次号</string>
    <string name="Lane_ppti">股道:</string>
    <string name="InTicketst_ptti">检票状态</string>
    <string name="ARRTIMR_PTTI">到点</string>
    <string name="ALATETIME_PTTI">到晚点</string>
    <string name="DEPATIME_PTTI">始发站</string>
    <string name="DLATETIME_PTTI">开晚点</string>
    <string name="Train_Type">当前站到点</string>
    <string name="STRTSTN_TT">始发站</string>
    <string name="TILSTN_TT">终到站</string>
    <string name="WAITROOM_PTTI">候车室:</string>
    <string name="INTICKET_PTTI">检票口:</string>
    <string name="PLATFORM_PTTI">站台:</string>
    <string name="OUTTICKET_PTTI">出站口:</string>
    <string name="GRPNO_PTTI">编组</string>
    <string name="PLANDATE_PTTI">计划日期</string>
    <string name="Schedule">时刻表</string>
    <string name="TrainOrigin">始发</string>
    <string name="TrainTerminal">终到</string>
    <string name="TrainAll">全部</string>
    <string name="Last">晚点</string>
    <string name="TrainVIA">途经</string>
    <string name="TrainNo">车次</string>
    <string name="TrainTerminalStation">终到站</string>
    <string name="TrainDepTime">开点</string>
    <string name="TrainTicketEnt">检票口</string>
    <string name="TrainStatus">状态</string>
    <string name="TrainOriginStation">始发站</string>
    <string name="TrainArrTime">到点</string>
    <string name="TrainPlatform">站台</string>
    <string name="search_all_platform">站台</string>
    <string name="search_all_status">检票状态</string>
    <string name="kilometre">公里</string>
    <string name="arrive">到</string>
    <string name="leave">发</string>
    <string name="man">人</string>
    <string name="search_input_train_num">请输入车次</string>
    <string name="search_all_lane">所有股道</string>
    <string name="search_all_inticket">所有检票状态</string>
    <string name="search_show_more">显示更多</string>
    <string name="search_start_time">开始时间</string>
    <string name="search_end_time">结束时间</string>
    <string name="user_online">在线</string>
    <string name="user_offline">离线</string>
    <string name="Num">序号</string>
    <string name="Station">站名</string>
    <string name="DepaDate">发车日期</string>
    <string name="DepaTime">发时</string>
    <string name="ArrDate">到达日期</string>
    <string name="ArrTime">到时</string>
    <string name="StationAttr">车站类别</string>
    <string name="Miles">里程</string>
    <string name="Close">关闭</string>
    <string name="Show">显示</string>
    <string name="Hide">隐藏</string>
    <string name="Waiting">请稍后</string>
    <string name="GettingData">正在获取数据</string>
    <string name="SavingData">正在保存数据</string>
    <string name="SavingGarbage">正在保存吸污数据</string>
    <string name="All">所有</string>
    <string name="EmptyName">无名</string>
    <string name="Prompt">提示</string>
    <string name="NonRecord">无任何数据</string>
    <string name="OK">确定</string>
    <string name="Yse">是</string>
    <string name="No">否</string>
    <string name="Failure">操作失败</string>
    <string name="Success">操作成功</string>
    <string name="ConfrmDel">确认删除</string>
    <string name="Cancel">取消</string>
    <string name="Delete">删除</string>
    <string name="begin_time">开始时间: </string>
    <string name="end_time">结束时间: </string>
    <string name="task_detail">任务详情</string>
    <string name="unduty_tips">未到岗提醒</string>
    <string name="tips_content">请于 %1$s 到 %2$s 执行 %3$s 检票任务，请尽快到岗作业。</string>
    <string name="tips_content_duty">请确认开始于%1$s 的 %2$s %3$s 检票任务已安排人员到岗。</string>
    <string name="tips_content_done">请确认开始于%1$s 的 %2$s %3$s 检票任务已完成。</string>
    <string name="ConfirmExit">确认退出吗？</string>
    <string name="Exit">退出</string>
    <string name="Report_Device">故障上报</string>
    <string name="noattach">(无附件)</string>
    <string name="dev_Fault_title">故障描述</string>
    <string name="dev_Fault_desc">故障描述:</string>
    <string name="dev_fault_status">状&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;态:</string>
    <string name="dev_fault_reporter">上&#160;&#160;报&#160;&#160;人:</string>
    <string name="dev_fault_rep_date">上报时间:</string>
    <string name="dev_using_dept">使用部门</string>
    <string name="dev_using_employee">使用人</string>
    <string name="remark">当前站类型</string>
    <string name="dev_using">使用信息</string>
    <string name="dev_info">设备信息</string>
    <string name="dev_confirm_status">确认状态</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="date">时间</string>
    <string name="dev_barcode">条码</string>
    <string name="ReturnEmpty">未能返回任何值</string>
    <string name="call_exception">返回异常</string>
    <string name="attach_list">附件列表</string>
    <string name="uploading">正在上传</string>
    <string name="uploadPre">准备上传</string>
    <string name="uploadSuccess">上传成功</string>
    <string name="uploadFailure">上传失败</string>
    <string name="train_wait_status">状态</string>
    <string name="select_file">选择文件</string>
    <string name="ex_load">导入异常</string>
    <string name="InsertHeadPhone">已插入耳机</string>
    <string name="OutHeadPhone">已取出耳机</string>
    <string name="dial">拨号</string>
    <string name="Fail2Add">添加失败</string>
    <string name="Success2Add">添加成功</string>
    <string name="Save">保存</string>
    <string name="NonCarema">未发现摄像头</string>
    <string name="CaremaIsOpened">摄像头正在使用中</string>
    <string name="messageError">新消息获取错误！</string>
    <string name="ReturnMain">返回</string>
    <string name="Return">返回</string>
    <string name="Edit">编辑</string>
    <string name="msg_message">短信</string>
    <string name="railway_platform">站台</string>
    <string name="Stay_long">停时</string>
    <string name="Forecast">预办</string>
    <string name="replayMessage">回复消息</string>
    <string name="transmitMessage">转发消息</string>
    <string name="deleteMessage">删除</string>
    <string name="confirmDelete">确定删除？</string>
    <string name="mySendMessage">已发送消息</string>
    <string name="selectAll">全选</string>
    <string name="unselectAll">取消全选</string>
    <string name="notifyunselect">请先选择要删除的消息</string>
    <string name="msg_addContact">请添加接收人</string>
    <string name="msg_inputMessage">请输入消息内容 </string>
    <string name="title_Send">发送</string>
    <string name="Day">天</string>
    <string name="Hour">小时</string>
    <string name="Min">分钟</string>
    <string name="str_Source">(起)</string>
    <string name="notifyobject">对象:</string>
    <string name="notifycontent">内容:</string>
    <string name="notifycall">电话</string>
    <string name="notifymessage">消息</string>
    <string name="Shift_In">接班</string>
    <string name="Shift_RecordVoice">录音</string>
    <string name="Shift_PlaySound">播放</string>
    <string name="Shift_Out_Upload">上传</string>
    <string name="task_shangshui">上水任务</string>
    <string name="task_station">站台任务</string>
    <string name="task_waitinghall">候车厅任务</string>
    <string name="task_checkin">检票口任务</string>
    <string name="task_exit">出站口任务</string>
</resources>