<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4D4D4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/title_bar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btntask_shangshui"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_m_selector"
            android:gravity="center"
            android:text="@string/task_shangshui"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btntask_station"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_m_selector"
            android:gravity="center"
            android:text="@string/task_station"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btntask_waitinghall"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_m_selector"
            android:gravity="center"
            android:text="@string/task_waitinghall"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btntask_checkin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_m_selector"
            android:gravity="center"
            android:text="@string/task_checkin"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btntask_exit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_m_selector"
            android:gravity="center"
            android:text="@string/task_exit"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>