<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D4D4D4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifyobject"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:focusable="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifycontent"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tip_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mlfootlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_footer"
        android:gravity="center|right" >

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_selector"
            android:text="@string/Cancel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/commitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/cancelBtn"
            android:background="@drawable/btn_selector"
            android:text="@string/notifymessage"
            android:textSize="18sp" />
        
        <Button
            android:id="@+id/callBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/commitBtn"
            android:background="@drawable/btn_selector"
            android:text="@string/notifycall"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>